@@ -1,3 +1,8 @@
+2005-06-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (::tkchat::Help): Rearranged the About dialog and
+	added a Quick Help entry.
+
 2005-06-16  Daniel South  <wildcard_25@users.sourceforge.net>
 
 	* tkchat.tcl:
